CHANGELOG

== Apr 06, 2012
* Twitter update now using Resque Queue
* jQuery-rails 1.7.2 update
* Back to using Resque

== Apr 01, 2012
* Fixed caching bug if item Images were modified
* Improved Item Cache Key to included last image timestamp
* Improved Item cache key to use human readable timestamps
* Revamped RSS/Atom Feeds
* Added basic Rspec Tests for RSS/Atom feeds
* Updated Feed Titles to match site name
* Improved Attachments Admin interface (/admin/attachments/1234)
* Improved performance of admin interface by adding Include joins sql queries.
* Changed per_page from 40 to 24 for faster loading.
* Upgraded ActiveAdmin to version 4.0.3
* Removed jQuery-ui js and css, custom minimal Modernizr.js
* Improved assets page loading time
* CSS and JS decreased by 80K after gzip, 300K before gzip

== Mar 30, 2012
* Added sticky highlight feature for articles
* Updated Dalli gem to 2.0.1, fater memcached
* Updated other Gems

== Mar 25, 2012
* Fixed Author Link on article page
* Fixed bug on editing user info
* Disabled WaterMarking temporarily

== Mar 17, 2012
* Fixed caching bug on the Category Boxes on main page

== Mar 14, 2012
* Add Unique UID to the images path
* Changed keywords examples to be more appropriate on admin site
* Gems updated
* Testing watermark on images

== Mar 12, 2012
* Popup image bug fix

== Mar 11, 2012
* Highly improved performance, from 1600ms to 220ms average (6-10x faster)
* Using fragment cache with memcached
* Upgraded Rails to 3.2.2
* Updated Gems
* Fix Font Color for item text, it was too light (CSS fix).

== Mar 6, 2012
* Fixed HTML5 spec bugs. Main Index and Category Index with Zero errors
* 100% passing the http://validator.w3.org/check test
* Fixed bug on twitter sharing not respecting the checkbox
* Added longer remember me for logged in users
* Better live preview for TinyMCE item editor
* Improved site performance
* Rspec tests for twitter share


== Mar 2, 2012
* Showing 2 columns on the Admin Dashboard instead of 3