@@ -38,7 +38,7 @@ module ItemsHelper
     # Example:
     # http://www.linkedin.com/shareArticle?mini=true&url=CONTENT-URL&title=CONTENT-TITLE&summary=DEATILS-OPTIONAL&source=YOURWEBSITE-NAME
     url = "http://www.linkedin.com/shareArticle?mini=true&url="
-    url += url_for(item_path(item.id, :only_path => false, :protocol => 'https'))
+    url += url_for(item_path(item.id, :only_path => false, :protocol => 'http'))
     url += "&title=#{url_encode(item.title)}"
     url += "&source=MNN"
     return url
@@ -46,7 +46,7 @@ module ItemsHelper
   
   def facebook_share(item)
     url = "https://www.facebook.com/sharer.php?u="
-    url += url_for(item_path(item.id, :only_path => false, :protocol => 'https'))
+    url += url_for(item_path(item.id, :only_path => false, :protocol => 'http'))
     url += "&t=#{url_encode(meta_title(item))}"
     return url
   end
@@ -55,13 +55,13 @@ module ItemsHelper
     url = "https://twitter.com/home?status="
     url += url_encode(item.title.truncate(116))
     url += "%20"
-    url += url_for(item_path(item, :only_path => false, :protocol => 'https'))
+    url += url_for(item_path(item, :only_path => false, :protocol => 'http'))
     return url
   end
   
   def digg_share(item)
     url = "http://digg.com/submit?url="
-    url += url_for(item_path(item, :only_path => false, :protocol => 'https'))
+    url += url_for(item_path(item, :only_path => false, :protocol => 'http'))
     url += "&title="
     url += url_encode(item.title)
     return url
@@ -69,13 +69,13 @@ module ItemsHelper
   
   def gplus_share(item)
     url = "https://plusone.google.com/_/+1/confirm?hl=en&url="
-    url += url_for(item_path(item, :only_path => false, :protocol => 'https'))
+    url += url_for(item_path(item, :only_path => false, :protocol => 'http'))
     return url
   end
     
   def reddit_share(item)
     url = "http://www.reddit.com/submit?url="
-    url += url_for(item_path(item, :only_path => false, :protocol => 'https'))
+    url += url_for(item_path(item, :only_path => false, :protocol => 'http'))
     url += "&title="
     url += url_encode(item.title)
     return url
@@ -83,13 +83,13 @@ module ItemsHelper
   
   def posterous_share(item)
     url = "http://posterous.com/share?linkto="
-    url += url_for(item_path(item, :only_path => false, :protocol => 'https'))
+    url += url_for(item_path(item, :only_path => false, :protocol => 'http'))
     return url
   end
   
   def slashdot_share(item)
     url = "http://slashdot.org/slashdot-it.pl?op=basic&url="
-    url += url_for(item_path(item, :only_path => false, :protocol => 'https'))
+    url += url_for(item_path(item, :only_path => false, :protocol => 'http'))
     url += "&title="
     url += url_encode(item.title)
     return url
@@ -97,7 +97,7 @@ module ItemsHelper
   
   def delicious_share(item)
     url = "http://www.delicious.com/save?url="
-    url += url_for(item_path(item, :only_path => false, :protocol => 'https'))
+    url += url_for(item_path(item, :only_path => false, :protocol => 'http'))
     url += "&title="
     url += url_encode(item.title)
     url += "&notes="
@@ -108,7 +108,7 @@ module ItemsHelper
   def email_share(item)
     sbj = item.title
     body = "#{item.abstract} - "
-    body += url_for(item_path(item, :only_path => false, :protocol => 'https'))
+    body += url_for(item_path(item, :only_path => false, :protocol => 'http'))
     "mailto:?subject=#{url_encode(sbj)}&body=#{url_encode(body)}"
   end
   
